style.css
/* ... */
.tab-anim-in {
    animation: tabFadeIn 0.35s cubic-bezier(.4, 0, .2, 1) forwards;
    pointer-events: none;
    z-index: 2;
    position: relative;
}



/* =======================================================================================================
   =================================FOOTER TEMPLATE=================================================
   =======================================================================================================*/
:root {
    /* Footer básico reutilizable */
    --footer-bg: var(--color-dark-3);
    --footer-text: #fff;
    --footer-link-hover: var(--color-secondary);
    --footer-copy: #bbb;
    --footer-padding: 25px 0 10px 0;
    --footer-font-size: 1rem;
    --footer-max-width: 1100px;
    --footer-padding-x: 10px;
    --footer-link-margin: 0 8px;
    --footer-social-size: 1.7rem;
    --footer-social-hover-size: 2rem;
    --footer-copy-size: 14px;
    /*--footer-social-hover-filter: invert(79%) sepia(22%) saturate(7492%) hue-rotate(-320deg) brightness(110%) contrast(104%);*/
}

footer {
    background: var(--footer-bg);
    color: var(--footer-text);
    padding: var(--footer-padding);
    font-size: var(--footer-font-size);
}
.contact__footer{
    background: transparent;
}
.footer__container {

    max-width: var(--footer-max-width);
    margin: 0 auto;
    margin-top: 30px;
    padding: 0 var(--footer-padding-x);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer__brand {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.footer-links a {
    color: var(--footer-text);
    text-decoration: none;
    margin: var(--footer-link-margin);
    transition: color 0.2s;
}

.footer-links a:hover {
    color: var(--footer-link-hover);
}

.footer__social {
    padding: 30px 0 15px 0;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    /* Espacio entre íconos */
}

.footer__social a {
    display: inline-block;
}

.footer__social img,
.footer__social svg {
    width: fit-content;
    height: var(--footer-social-size);
    filter: brightness(0) invert(1);
    transition:
        filter 0.2s,
        transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
    box-sizing: border-box;
    vertical-align: middle;
    display: inline-block;
}

.footer__social a:hover img,
.footer__social a:hover svg {

    transform: scale(1.18);
    /* Ajusta el factor según tu gusto */
}

/*=======================================================
======= FOOTER sin sombra en el tap del movil =========
=========================================================== */
.footer-links,
.footer__social,
.footer-links a,
.footer__social a {
    -webkit-tap-highlight-color: transparent !important;
    outline: none !important;
    user-select: none;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -webkit-tap-highlight-color: transparent !important;
}
.footer-links:focus,
.footer-links:active,
.footer-links a:focus,
.footer-links a:active {
    outline: none !important;
    -webkit-tap-highlight-color: transparent !important;
}
.footer__social:focus,
.footer__social:active,
.footer__social a:focus,
.footer__social a:active  {
    outline: none !important;
    -webkit-tap-highlight-color: transparent !important;
}





.footer-copy {
    font-size: var(--footer-copy-size);
    color: var(--footer-copy);
    text-align: center;
}


/* =======================================================================================================
   =================================FAQ TEMPLATE==========================================================
   =======================================================================================================*/
:root {
    /* Colores principales */
    --color-main: #333;
    --color-answer-bg: #f6f6fa;
    --color-shadow: rgba(0, 0, 0, 0.04);
    --color-shadow-open: rgba(0, 0, 0, 0.08);
}


/* Contenedor principal */
.faq__section {
    background: #111;
    font-family: var(--font-main);
    padding-bottom: 0px;
    margin-bottom: 0px;
    height: 100%;
}

#faqSection .section__title {
    max-width: 900px;
    padding-top: 140px;
    padding-bottom: 50px;
}

#faqSection .section__title h2 {
    color: var(--color-secondary);
}

#faqSection .section__title p {
    color: white;
    font-size: 1.2rem;
}

.main__container {
    max-width: 700px;
    margin: 0 auto;
    padding: 0 16px;
}

.faq__title {
    font-size: 2rem;
    font-weight: 700;
    margin-bottom: 32px;
    text-align: center;
    color: var(--color-secondary);
}

.faq__list {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.faq__item {
    background: #fff;
    border-radius: 5px;
    overflow: hidden;
    transition: box-shadow 0.2s, background 0.2s, color 0.2s;
}


.faq__question {
    width: 100%;
    background: none;
    border: none;
    outline: none;
    font-size: 1.1rem;
    font-weight: 500;
    text-align: left;
    padding: 15px 20px 15px 20px;
    cursor: pointer;
    position: relative;
    color: var(--color-dark);
    transition: background 0.2s, color 0.2s;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 30px;
}
.faq__icon {
    margin-left: 12px;
    transition: transform 0.3s;
    display: flex;
    align-items: center;
}
.faq__icon img {
    width: 20px;
    height: 20px;
    display: inline-block;
    color: var(--color-secondary);
    transition: color 0.2s;
}


/*======= Eliminar la sobra del hover sin sombra en el tap del movil ======
=========================================================== */
.faq__question,
.faq__question span {
    -webkit-tap-highlight-color: transparent !important;
    outline: none !important;
    user-select: none;
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -webkit-tap-highlight-color: transparent !important;
}
/* ... */

